fixed banner issue on mobile

--- a/media.css
+++ b/media.css
@@ -33,6 +33,11 @@
     display: none;
   }
 
+  .banner-wrapper > .img-res {
+    height: 90vh;
+    object-fit: cover;
+  }
+
   /* Cards Section */
 
   .cards-wrapper {
